# rts_game_web

./: Cargo.toml  LICENSE  index.html  rts_game_web-3373b21db68485ef.js  rts_game_web-88ad37f5cdddd9bd.js  rts_game_web-9c30b35c7dccab4a.js
.github/workflows/: ci.yml
assets/colliders/: crane_yard_collider.glb  factory_collider.glb  marine_squad_collider.glb  marine_squad_collider.txt  resource_node_collider.glb  resource_platform_collider.glb  tank_collider.glb
assets/levels/: developer.t5flvl  direction.ron  sandbox.ron
assets/maps/: developer.t5fmap  direction.ron  sandbox.ron
assets/models/: crane_yard.glb  default_cube.glb  developer.glb  direction.glb  factory.glb  first_3d_map.glb  marine.glb  resource_node.glb  resource_platform_claimed.glb  resource_platform_unclaimed.glb  sandbox.glb  tank_base.glb  tank_gun.glb  weird_cube.glb
assets/objects/: crane_yard.t5fobj  default_cube.t5fobj  factory.t5fobj  marine_squad.t5fobj  resource_node.t5fobj  resource_platform_claimed.t5fobj  resource_platform_unclaimed.t5fobj  tank.t5fobj
assets/saves/: developer.ron  developer_level.ron
assets/textures/ui/: black_box.png~  health_bar_end.png~  health_bar_middle.png~  health_bar_start.png~
src/: main.rs
