[package]
name = "rts_game_web" # ToDo
version = "0.1.0"
publish = false
authors = ["JJJimbo1"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
the5thfundamental_game = { path = "../the5thfundamental_bevy/the5thfundamental_game" }

